# real-estate-hub

./: Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  tests.yml
.streamlit/: config.toml  credentials.toml
app/: main.py
etl/: process_location_stats.py
manifests/: web-ui-app.yaml  web-ui-ingress.yaml  web-ui-svc.yaml
notebooks/: 2022-01-08-data.ipynb  2022-01-10-zolodata.ipynb  2022-01-25-directions.ipynb
real_estate_hub/: config.py
real_estate_hub/data_feeds/: google_geo.py  location_stats.py
real_estate_hub/data_feeds/google/: core.py  directions.py
real_estate_hub/data_feeds/web/: zolo_scraper.py
real_estate_hub/data_generators/: location_stats.py  zolo_scraper.py
tests/: test_directions.py  test_google_geo.py  test_location_stats.py  test_zolo_scraper.py
tests/data_generators/: test_location_stats.py  test_zolo_scraper.py
