[tool.poetry]
name = "real-estate-hub"
version = "0.1.0"
description = "Get information about a neighbourhood, home or area."
authors = ["Ashton Sidhu <ashton.sidhu1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.3.1"
loguru = "^0.5.3"
elasticsearch = "<8"
pandas = "^1.3.5"
plotly = "^5.5.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
