[tool.poetry]
name = "real-estate-hub"
version = "0.1.0"
description = "Get information about a neighbourhood, home or area."
authors = ["Ashton Sidhu <ashton@sidhulabs.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
pandas = "^1.3.5"
plotly = "^5.5.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
html5lib = "^1.1"
prefect = {version = "0.15.11", optional = true}
streamlit = {version = "^1.4.0", optional = true}
requests = "<2.27"
StrEnum = "^0.4.7"
sidhulabs = "^2022.2.11"

[tool.poetry.extras]
etl = ["prefect"]
web = ["streamlit"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "5.10.1"
black = "21.11b1"

[tool.black]
line-length = 120

# Per https://github.com/psf/black/tree/main/docs/compatible_configs
[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 1
use_parentheses = true
balanced_wrapping = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
